# 20NAR1

./: .gitignore  Cargo.toml
src/: ModNlpA.rs  NarGoalSystem.rs  NarWorkingCycle.rs
