[package]
name = "nar20_1"
version = "0.1.9"
authors = ["PtrMan rt09@protonmail.com"]
edition = "2018"

[dependencies]
async-std = "1.9.0"
rand = "0.8.0"

nom = "7.1.3"

parking_lot = "0.12.2"

[dependencies.rusqlite]
version = "0.31.0"
features = ["bundled"] # must enable this feature to ensure compilation on Windows

[profile.release]
debug = true